test/files/neg/t0218.check
t0218.scala:10: error: class type required but APQ.this.P found
    List(new PP)
             ^
one error found
